--- a/AuthorBookCRUD/nbproject/private/private.properties
+++ b/AuthorBookCRUD/nbproject/private/private.properties
@@ -1,6 +1,6 @@
 compile.on.save=true
-file.reference.derby.jar=V:\\My Documents\\NetBeansProjects\\AddressBookDAOFly\\lib\\derby.jar
-file.reference.derbyclient.jar=V:\\My Documents\\NetBeansProjects\\AddressBookDAOFly\\lib\\derbyclient.jar
-file.reference.derbynet.jar=V:\\My Documents\\NetBeansProjects\\AddressBookDAOFly\\lib\\derbynet.jar
-file.reference.flyway-core-3.2.1.jar=V:\\My Documents\\NetBeansProjects\\AddressBookDAOFly\\lib\\flyway-core-3.2.1.jar
-user.properties.file=C:\\Users\\jjb6569\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.derby.jar=C:\\Users\\Jefferson\\Documents\\NetBeansProjects\\AddressBookDAOFly\\lib\\derby.jar
+file.reference.derbyclient.jar=C:\\Users\\Jefferson\\Documents\\NetBeansProjects\\AddressBookDAOFly\\lib\\derbyclient.jar
+file.reference.derbynet.jar=C:\\Users\\Jefferson\\Documents\\NetBeansProjects\\AddressBookDAOFly\\lib\\derbynet.jar
+file.reference.flyway-core-3.2.1.jar=C:\\Users\\Jefferson\\Documents\\NetBeansProjects\\AddressBookDAOFly\\lib\\flyway-core-3.2.1.jar
+user.properties.file=C:\\Users\\Jefferson\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
